--- a/src/view/popup.html
+++ b/src/view/popup.html
@@ -17,7 +17,8 @@
     <input type="text" id="username" name="username" placeholder="GitHub Username" required>
     <input type="text" id="token" name="token" placeholder="GitHub Token" required>
     <div class="box-button">
-      <button type="submit">Save</button>
+      <p id="saved">Data saved successfully!<p>
+      <button id="save-button" type="submit">Save</button>
     </div>
   </form>
   <script src="../modules/script.js"></script>
