--- a/src/assets/style/popup.css
+++ b/src/assets/style/popup.css
@@ -40,7 +40,6 @@ body .use .box-button .turn {
     background-position: center;
     background-color: transparent;
     background-image: url("../source/image/turn.png");
-    filter: invert(50%) sepia(100%) saturate(500%) hue-rotate(180deg);
     border: none;
     cursor: pointer;
     outline: none;
@@ -51,8 +50,8 @@ body .use .status-text{
     margin-bottom: 25px;
 }
 
-.on {
-    filter: invert(44%) sepia(91%) saturate(4743%) hue-rotate(360deg) brightness(97%) contrast(106%);
+body .use .box-button .on {
+    filter: invert(50%) sepia(100%) saturate(500%) hue-rotate(180deg);
 }
 
 #credentials-form{
@@ -89,7 +88,20 @@ body .use .status-text{
     justify-content: center;
 }
 
-#credentials-form .box-button button {
+#credentials-form .box-button #saved {
+    margin-right: 4px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 93%;
+    border-radius: 7px;
+    padding: 10px;
+    background-color: #48A7FF;
+    color: #323543;
+}
+
+#credentials-form .box-button #save-button {
     background-color: #323543;
     padding: 7px;
     border-radius: 7px;
